添加学习文档

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 /trunk/research/api-server/static-dir/forward
 /trunk/research/api-server/static-dir/live
 /trunk/research/api-server/static-dir/players
+/trunk/out
 
 # Apple-specific garbage files.
 .AppleDouble
